@@ -595,6 +595,8 @@ bool eGameObject::Timestep(REAL t){
 }
 // return value: shall this object be destroyed?
 
+void eGameObject::OnRoundEnd(){}
+
 void eGameObject::Kill(){}
 
 // draws it to the screen using OpenGL
